seleção de características ok

--- a/SSVEP/ml/beta_ml.ipynb
+++ b/SSVEP/ml/beta_ml.ipynb
@@ -60,8 +60,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Manipulação dos dados"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -171,23 +178,23 @@
       "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 647 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.1s\n",
       "[Parallel(n_jobs=1)]: Done 1151 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.2s\n",
       "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.3s\n",
-      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.4s\n",
-      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    0.8s\n",
-      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    0.9s\n",
-      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.0s\n",
-      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.3s\n",
-      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    1.4s\n",
-      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    1.5s\n"
+      "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.6s\n",
+      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    0.7s\n",
+      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    0.8s\n",
+      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    0.9s\n",
+      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    1.0s\n",
+      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.2s\n",
+      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.3s\n",
+      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.5s\n",
+      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    1.6s\n",
+      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    1.7s\n"
      ]
     },
     {
@@ -229,7 +236,7 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +268,7 @@
        "33687.47367694818"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +314,7 @@
        "(160, 64, 40)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +406,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Seleção de característica manual"
+    "### Determinação das características"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Seleção de característica manual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dados filtrados com 9 eletrodos (160, 9, 80)\n",
+      "(160, 720)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "channels_to_keep = ['PZ', 'PO3', 'PO5', 'PO4', 'PO6', 'POZ', 'O1', 'OZ', 'O2']\n",
+    "\n",
+    "# Crie uma máscara booleana para os canais a serem mantidos\n",
+    "mask = np.isin(ch_names, channels_to_keep)\n",
+    "\n",
+    "# Use a máscara para selecionar os canais desejados na matriz data\n",
+    "data_filtered = data[:, mask, :]\n",
+    "\n",
+    "print(\"Dados filtrados com 9 eletrodos\", data_filtered.shape)\n",
+    "\n",
+    "selected_ch = data_filtered.reshape(data_filtered.shape[0], -1)\n",
+    "print(selected_ch.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Vetor de características sem seleção"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(160, 64, 80)\n",
+      "(160, 5120)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.shape)\n",
+    "data_reshape = data.reshape(data.shape[0], -1)\n",
+    "print(data_reshape.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Treinamento com SVM"
    ]
   },
   {
