--- a/SSVEP/classificador/classifier_per_freq_beta.ipynb
+++ b/SSVEP/classificador/classifier_per_freq_beta.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
      "output_type": "stream",
      "text": [
       "Possíveis alvos: [8.0, 8.2, 8.4, 8.6, 8.799999999999999, 9.0, 9.2, 9.4, 9.6, 9.8, 10.0, 10.2, 10.4, 10.6, 10.8, 11.0, 11.2, 11.4, 11.6, 11.8, 12.0, 12.2, 12.4, 12.600000000000001, 12.8, 13.0, 13.200000000000001, 13.4, 13.600000000000001, 13.8, 14.0, 14.200000000000001, 14.4, 14.600000000000001, 14.8, 15.0, 15.200000000000001, 15.4, 15.600000000000001, 15.8]\n",
-      "Percentage: 2.5\n"
+      "Accuracia: 2.5 %\n"
      ]
     }
    ],
@@ -130,7 +130,8 @@
     "        if np.any((max_frequency >= fmin) & (max_frequency <= fmax)):\n",
     "          hits += 1\n",
     "\n",
-    "print(f\"Acc: {hits*100/len(y)}\")"
+    "accuracy = (hits / len(y)) * 100\n",
+    "print(f\"Accuracia: {accuracy} %\")"
    ]
   }
  ],
