--- a/SSVEP/classificador/classifier_per_freq_multi.ipynb
+++ b/SSVEP/classificador/classifier_per_freq_multi.ipynb
@@ -29,30 +29,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading c:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\..\\preprocessing_multi\\avi_multitarget.fif ...\n",
+      "Reading c:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\..\\preprocessing\\preprocessing_multi\\avi_multitarget.fif ...\n",
       "Isotrak not found\n",
       "    Found the data of interest:\n",
       "        t =       0.00 ...   15998.05 ms\n",
-      "        0 CTF compensation matrices available\n",
-      "Not setting metadata\n",
-      "100 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n"
+      "        0 CTF compensation matrices available\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_17268\\1600408532.py:4: RuntimeWarning: This filename (../preprocessing_multi/avi_multitarget.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
-      "  data = mne.read_epochs(\"../preprocessing_multi/avi_multitarget.fif\")\n"
+      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_12492\\815474477.py:4: RuntimeWarning: This filename (../preprocessing/preprocessing_multi/avi_multitarget.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "  data = mne.read_epochs(\"../preprocessing/preprocessing_multi/avi_multitarget.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not setting metadata\n",
+      "100 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n"
      ]
     }
    ],
@@ -60,12 +66,12 @@
     "import mne\n",
     "\n",
     "# tarefa 1\n",
-    "data = mne.read_epochs(\"../preprocessing_multi/avi_multitarget.fif\")"
+    "data = mne.read_epochs(\"../preprocessing/preprocessing_multi/avi_multitarget.fif\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +115,7 @@
        " '9.3': 5>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -241,13 +247,6 @@
     "acc = 100 * sum(hits) / len(y)\n",
     "print(f'\\nPorcentagem de acerto: {acc:.2f}%')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
