--- a/SSVEP/classificador/classifier_per_freq_single.ipynb
+++ b/SSVEP/classificador/classifier_per_freq_single.ipynb
@@ -29,30 +29,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading C:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\..\\preprocessing_single\\avi_singletarget.fif ...\n",
+      "Reading c:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\..\\preprocessing\\preprocessing_single\\avi_singletarget.fif ...\n",
       "Isotrak not found\n",
       "    Found the data of interest:\n",
       "        t =       0.00 ...   29998.05 ms\n",
-      "        0 CTF compensation matrices available\n",
-      "Not setting metadata\n",
-      "84 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n"
+      "        0 CTF compensation matrices available\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_12008\\1701217269.py:4: RuntimeWarning: This filename (../preprocessing_single/avi_singletarget.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
-      "  data = mne.read_epochs(\"../preprocessing_single/avi_singletarget.fif\")\n"
+      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_5360\\3259388488.py:4: RuntimeWarning: This filename (../preprocessing/preprocessing_single/avi_singletarget.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "  data = mne.read_epochs(\"../preprocessing/preprocessing_single/avi_singletarget.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not setting metadata\n",
+      "84 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n"
      ]
     }
    ],
@@ -60,12 +66,12 @@
     "import mne\n",
     "\n",
     "# tarefa 1\n",
-    "data = mne.read_epochs(\"../preprocessing_single/avi_singletarget.fif\")"
+    "data = mne.read_epochs(\"../preprocessing/preprocessing_single/avi_singletarget.fif\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +116,7 @@
        " '10': 12>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,15 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Possíveis alvos: [6.0, 6.5, 7.0, 7.5, 8.2, 9.3, 10.0]\n",
-      "Formato dos dados calculados: (84, 7, 1, 1, 15)\n"
+      "Possíveis alvos: [6.0, 6.5, 7.0, 7.5, 8.2, 9.3, 10.0]\n"
      ]
     }
    ],
@@ -162,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
