--- a/SSVEP/classificador/classifier_per_freq_beta.ipynb
+++ b/SSVEP/classificador/classifier_per_freq_beta.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading c:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\..\\preprocessing_beta\\beta_epo.fif ...\n",
+      "Reading c:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\..\\preprocessing\\preprocessing_beta\\beta_epo.fif ...\n",
       "Isotrak not found\n",
       "    Found the data of interest:\n",
       "        t =       0.00 ...    2996.00 ms\n",
-      "        0 CTF compensation matrices available\n",
+      "        0 CTF compensation matrices available\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Not setting metadata\n",
       "160 matching events found\n",
       "No baseline correction applied\n",
@@ -79,14 +85,14 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#  carregar os dados\n",
-    "data = mne.read_epochs(\"../preprocessing_beta/beta_epo.fif\")\n",
+    "data = mne.read_epochs(\"../preprocessing/preprocessing_beta/beta_epo.fif\")\n",
     "# entendimento dos dados\n",
     "print(data.get_data().shape)\n",
     "data"
@@ -94,14 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Possíveis alvos: [8.0, 8.2, 8.4, 8.6, 8.799999999999999, 9.0, 9.2, 9.4, 9.6, 9.8, 10.0, 10.2, 10.4, 10.6, 10.8, 11.0, 11.2, 11.4, 11.6, 11.8, 12.0, 12.2, 12.4, 12.600000000000001, 12.8, 13.0, 13.200000000000001, 13.4, 13.600000000000001, 13.8, 14.0, 14.200000000000001, 14.4, 14.600000000000001, 14.8, 15.0, 15.200000000000001, 15.4, 15.600000000000001, 15.8]\n",
+      "Possíveis alvos: [8.0, 8.2, 8.4, 8.6, 8.799999999999999, 9.0, 9.2, 9.4, 9.6, 9.8, 10.0, 10.2, 10.4, 10.6, 10.8, 11.0, 11.2, 11.4, 11.6, 11.8, 12.0, 12.2, 12.4, 12.600000000000001, 12.8, 13.0, 13.200000000000001, 13.4, 13.600000000000001, 13.8, 14.0, 14.200000000000001, 14.4, 14.600000000000001, 14.8, 15.0, 15.200000000000001, 15.4, 15.600000000000001, 15.8]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Accuracia: 2.5 %\n"
      ]
     }
