--- a/SSVEP/ml/beta_ml.ipynb
+++ b/SSVEP/ml/beta_ml.ipynb
@@ -68,18 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mne\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import mne\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "from sklearn.feature_selection import RFECV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -134,15 +138,13 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
     "labels = np.load(\"../datasets/beta/labels.npy\")\n",
     "print(labels, labels.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -174,27 +176,33 @@
      "text": [
       "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 647 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 1151 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.3s\n",
-      "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.3s\n",
-      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.4s\n",
-      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    0.8s\n",
-      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    1.0s\n",
-      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.2s\n",
-      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.3s\n",
-      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    1.4s\n",
-      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    1.6s\n"
+      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=1)]: Done 647 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.6s\n",
+      "[Parallel(n_jobs=1)]: Done 1151 tasks      | elapsed:    0.8s\n",
+      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    1.0s\n",
+      "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    1.1s\n",
+      "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    1.3s\n",
+      "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    1.6s\n",
+      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    1.9s\n",
+      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    2.1s\n",
+      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    2.4s\n",
+      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    2.7s\n",
+      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    3.1s\n",
+      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    3.5s\n",
+      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    3.9s\n",
+      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    4.2s\n",
+      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    4.6s\n",
+      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    5.2s\n",
+      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    5.9s\n"
      ]
     },
     {
@@ -236,7 +244,7 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +276,7 @@
        "33687.47367694818"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -314,14 +322,12 @@
        "(160, 64, 40)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from scipy.signal import find_peaks\n",
-    "\n",
     "sr = 250\n",
     "\n",
     "# Frequências alvo\n",
@@ -351,39 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(160, 64, 40)\n",
-      "(160, 64, 40)\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# forçando (estragando) valor de \"estimated_background_noise\" para não sobrar valores negativos\n",
-    "estimated_background_noise = 1.\n",
-    "\n",
-    "target_amplitudes_adjusted = np.abs(target_amplitudes - estimated_background_noise)\n",
-    "\n",
-    "# subtraindo o ruído de fundo das amplitudes\n",
-    "narrow_band_SNR = 10 * np.log10(target_amplitudes_adjusted / estimated_background_noise)\n",
-    "print(narrow_band_SNR.shape)\n",
-    "\n",
-    "total_power = np.sum(target_amplitudes_adjusted)\n",
-    "wide_band_SNR = 10 * np.log10(target_amplitudes_adjusted / total_power)\n",
-    "\n",
-    "print(wide_band_SNR.shape)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -395,6 +369,15 @@
     }
    ],
    "source": [
+    "target_amplitudes_adjusted = np.abs(target_amplitudes - mean_noise_power)\n",
+    "\n",
+    "# subtraindo o ruído de fundo das amplitudes\n",
+    "narrow_band_SNR = 10 * np.log10(target_amplitudes_adjusted / mean_noise_power)\n",
+    "\n",
+    "total_power = np.sum(target_amplitudes_adjusted)\n",
+    "wide_band_SNR = 10 * np.log10(target_amplitudes_adjusted / total_power)\n",
+    "\n",
+    "\n",
     "data = np.array([narrow_band_SNR, wide_band_SNR])\n",
     "data = data.swapaxes(0, 1)\n",
     "data = data.swapaxes(1, 2)\n",
@@ -418,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +414,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "channels_to_keep = ['PZ', 'PO3', 'PO5', 'PO4', 'PO6', 'POZ', 'O1', 'OZ', 'O2']\n",
     "\n",
     "# Crie uma máscara booleana para os canais a serem mantidos\n",
@@ -443,7 +424,7 @@
     "\n",
     "print(\"Dados filtrados com 9 eletrodos\", data_filtered.shape)\n",
     "\n",
-    "selected_ch = data_filtered.reshape(data_filtered.shape[0], -1)\n",
+    "selected_ch = data_filtered.reshape(data_filtered.shape[0], data_filtered.shape[1] * data_filtered.shape[2])\n",
     "print(selected_ch.shape)"
    ]
   },
@@ -456,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -502,11 +483,6 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
     "# Carregue um conjunto de dados de exemplo (substitua pelo seu próprio conjunto de dados)\n",
     "X = X = StandardScaler().fit_transform(selected_ch)\n",
     "y = LabelEncoder().fit_transform(labels)\n",
@@ -537,23 +513,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia: 0.015625\n"
+      "Acurácia: 0.03125\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
     "# Carregue um conjunto de dados de exemplo (substitua pelo seu próprio conjunto de dados)\n",
     "X = X = StandardScaler().fit_transform(data_reshape)\n",
     "y = LabelEncoder().fit_transform(labels)\n",
