alterações no ml

--- a/SSVEP/src/beta/beta_ml.ipynb
+++ b/SSVEP/src/beta/beta_ml.ipynb
@@ -17,58 +17,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Analisar os momentos em que ocorrem evocação do sinal SSVEP\n",
-    "\n",
-    "1. Criar o objeto MNE a partir dos dados do participante;\n",
-    "2. Aplicar no objeto MNE o filtro passa-faixa nos valores de 6 a 18 Hz;\n",
-    "3. Criar cópias do objeto MNE (.copy()) com fatias de tempo menores para analisar momentos que ocorrem estímulos ou não (verificar artigo)´;\n",
-    "    - 0.0 - 0.5 segundos e 2.5 - 3.0 segundos ocorre apenas ruído;\n",
-    "    0.5 - 2.5 ocorre sinal SSVEP com ruído\n",
-    "4. Com os sinais separados em objeto MNE, aplicar a FFT para que seja possível plotar gráficos que contenham (ou não) as informações (obet os dados no domínio da frequência com get_data para que seja possível plotar os gráficos)\n",
-    "    - Os dados devem ser plotados no domínio da frequência após a transformada de Fourier. O FFT pode ser realizado pela biblioteca scipy.fft\n",
-    "    - Deve ser observado que as janelas 0.0 - 0.5s com ruído não aparecerão de fato o sinal SSVEP"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Extração de características\n",
-    "\n",
-    "Uma característica importante de acordo com o artigo base é o *signal-to-noise ratio* (SNR). Ao final desta etapa, será obtido um vetor de características. Estas podem ser:\n",
-    "- SNR (obrigatória)\n",
-    "- Maior valor espectral (FFT)\n",
-    "- Média dos valores espectrais (FFT)\n",
-    "\n",
-    "Teremos um vetor de características de 64 x 3. Final (160, 64 + 64+ 64, 750)\n",
-    "\n",
-    "Dimensionalidade dos dados será explicada da seguinte formada: \n",
-    "40, 4, 64, 750 -> 40 targets, 4 trials, 64 canais e 750 valores\n",
-    "160, 64 (SNR) + 64 (média) + 64 (maior), ...\n",
-    "\n",
-    "Resultando em 160, 192"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Seleção de características\n",
-    "Como existem diversos eletrodos (canais) que não obtém sinal SSVEP, podemos extrair as características que não contribuem para a classificação dos dados. Podemos utilizar o método RFE (*Recursive Feature Elimination*), aplicado por meio de sklearn.feature_selecion.RFE, aprimorando o parâmetro n_features_to_select até obter o melhor resultado de classificação. Diminuir as features até o SVM dar o melhor resultado.\n",
-    "\n",
-    "Para a classificação propriamente dita, é considerado o uso do SVM (o kernel só pode ser linear)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Manipulação dos dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -95,13 +49,13 @@
     }
    ],
    "source": [
-    "data = np.load(\"../datasets/beta/data.npy\")\n",
+    "data = np.load(\"../../datasets/beta/data.npy\")\n",
     "print(data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -138,13 +92,13 @@
     }
    ],
    "source": [
-    "labels = np.load(\"../datasets/beta/labels.npy\")\n",
+    "labels = np.load(\"../../datasets/beta/labels.npy\")\n",
     "print(labels, labels.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +106,13 @@
      "output_type": "stream",
      "text": [
       "Not setting metadata\n",
-      "160 matching events found\n",
+      "160 matching events found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "No baseline correction applied\n",
       "0 projection items activated\n",
       "Setting up band-pass filter from 6 - 18 Hz\n",
@@ -179,24 +139,24 @@
       "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 647 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=1)]: Done 647 tasks      | elapsed:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 1151 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.2s\n",
       "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.3s\n",
       "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.4s\n",
       "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    0.8s\n",
-      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    0.9s\n",
-      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.0s\n",
-      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.3s\n",
-      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    1.4s\n",
-      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    1.6s\n"
+      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.6s\n",
+      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    0.7s\n",
+      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    0.8s\n",
+      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    1.0s\n",
+      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    1.1s\n",
+      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.3s\n",
+      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.5s\n",
+      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.8s\n",
+      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    2.0s\n",
+      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    2.2s\n"
      ]
     },
     {
@@ -238,7 +198,7 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33687.47367694818"
+       "29962.711288130937"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +276,7 @@
        "(160, 64, 40)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -461,54 +421,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Seleção de característica manual"
+    "#### Seleção de característica manual com SVM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia: 0.020833333333333332\n"
+      "Acurácia: 35.42%\n"
      ]
     }
    ],
    "source": [
-    "# Carregue um conjunto de dados de exemplo (substitua pelo seu próprio conjunto de dados)\n",
-    "X = X = StandardScaler().fit_transform(selected_ch)\n",
+    "# Normalizando os dados\n",
+    "X = StandardScaler().fit_transform(selected_ch)\n",
     "y = LabelEncoder().fit_transform(labels)\n",
-    "\n",
-    "# Divida os dados em conjunto de treinamento e conjunto de teste\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
-    "\n",
-    "# Crie um modelo SVM com kernel linear\n",
     "svm_model = SVC(kernel='linear', probability=True, C=1)\n",
-    "\n",
-    "# Treine o modelo SVM\n",
     "svm_model.fit(X_train, y_train)\n",
-    "\n",
-    "# Faça previsões no conjunto de teste\n",
     "y_pred = svm_model.predict(X_test)\n",
-    "\n",
-    "# Calcule a acurácia do modelo\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f'Acurácia: {accuracy}')\n"
+    "print(f\"Acurácia: {accuracy:.2%}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Seleção de característica manual com validação cruzada"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia média: 5.62% +/- 4.38% (desvio padrão)\n"
+      "Acurácia média: 55.00%\n"
      ]
     }
    ],
@@ -519,9 +476,10 @@
     "scaler = StandardScaler()\n",
     "\n",
     "# Normalizando os dados\n",
-    "X = scaler.fit_transform(X)\n",
+    "X = scaler.fit_transform(selected_ch)\n",
+    "y = LabelEncoder().fit_transform(labels)\n",
     "\n",
-    "# Dividindo os dados normalizados em 5 conjuntos (folds) para validação cruzada\n",
+    "# Dividindo os dados normalizados em 2 conjuntos (folds) para validação cruzada\n",
     "cv = StratifiedKFold(n_splits=2)\n",
     "\n",
     "# Lista para armazenar as acurácias para cada fold\n",
@@ -545,14 +503,10 @@
     "    # Armazene a acurácia deste fold na lista\n",
     "    acc_scores.append(fold_accuracy)\n",
     "\n",
-    "# Calcule a média das acurácias dos folds\n",
     "mean_acc = np.mean(acc_scores)\n",
     "\n",
-    "# Calcule o desvio padrão das acurácias dos folds\n",
-    "std_acc = np.std(acc_scores)\n",
-    "\n",
     "# Imprima a média e o desvio padrão das acurácias\n",
-    "print(f\"Acurácia média: {mean_acc:.2%} +/- {std_acc:.2%} (desvio padrão)\")"
+    "print(f\"Acurácia média: {mean_acc:.2%}\")"
    ]
   },
   {
