--- a/SSVEP/src/beta/beta_ml.ipynb
+++ b/SSVEP/src/beta/beta_ml.ipynb
@@ -10,7 +10,10 @@
     "\n",
     "#### Pontos importantes\n",
     "- Frequências estimuladas (tota de 40, com a diferença de 0.2 Hz uma da outra): 8.9; 8.2, ...., 15.6, 15.8;\n",
-    "- Taxa de amostragem: 250Hz"
+    "- Taxa de amostragem: 250Hz\n",
+    "\n",
+    "#### Leia aqui\n",
+    "Fez-se testes de todo o código para alguns participantes distintos como S1, S2, S3, S4 e S5. A acurácia do BETA variou bastante, principalmene no participante S5 que ficou com uma taxa inferior que 10% de acerto."
    ]
   },
   {
@@ -22,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +33,17 @@
     "import mne\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.feature_selection import RFE, RFECV\n",
+    "from sklearn import svm\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, f1_score\n",
-    "from sklearn.feature_selection import RFECV"
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -106,13 +112,7 @@
      "output_type": "stream",
      "text": [
       "Not setting metadata\n",
-      "160 matching events found\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "160 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
       "Setting up band-pass filter from 6 - 18 Hz\n",
@@ -139,21 +139,21 @@
       "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 647 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 1151 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.3s\n",
-      "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.4s\n",
-      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    0.8s\n",
-      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    1.0s\n",
-      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.3s\n",
-      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.5s\n",
+      "[Parallel(n_jobs=1)]: Done 647 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=1)]: Done 1151 tasks      | elapsed:    0.2s\n",
+      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.6s\n",
+      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.7s\n",
+      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.8s\n",
+      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    1.0s\n",
+      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    1.1s\n",
+      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    1.2s\n",
+      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    1.4s\n",
+      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.5s\n",
+      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.7s\n",
       "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.8s\n",
       "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    2.0s\n",
       "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    2.2s\n"
@@ -198,7 +198,7 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "29962.711288130937"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "(160, 64, 40)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -386,12 +386,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Vetor de características sem seleção"
+    "#### 2. Seleção de característica automática"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Vetor de características sem seleção"
+    "#### Seleção de característica automática com RFE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "X = scaler.fit_transform(data_reshape)\n",
+    "y = LabelEncoder().fit_transform(labels)\n",
+    "\n",
+    "rfe = RFE(svm.SVC(kernel=\"linear\"), step=0.0001, n_features_to_select=500)\n",
+    "X_final = rfe.fit_transform(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia: 66.67%\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(X_final, y, test_size=0.3, random_state=42)\n",
+    "clf = SVC(kernel='linear', C=1, random_state=42, probability=True)\n",
+    "clf.fit(x_train, y_train)\n",
+    "y_pred = clf.predict(x_test)\n",
+    "print(f\"Acurácia {accuracy_score(y_test, y_pred):.2%}\")\n"
    ]
   }
  ],
