--- a/SSVEP/src/beta/beta_ml.ipynb
+++ b/SSVEP/src/beta/beta_ml.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,14 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.feature_selection import RFE, RFECV\n",
+    "from sklearn.feature_selection import RFE\n",
     "from sklearn import svm\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.svm import SVC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,24 +137,24 @@
       "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done 647 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=1)]: Done 647 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 1151 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.3s\n",
-      "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.4s\n",
-      "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.8s\n",
-      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    1.0s\n",
-      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    1.2s\n",
-      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    1.4s\n",
-      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.5s\n",
-      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.7s\n",
-      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.8s\n",
-      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    2.0s\n",
-      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    2.2s\n"
+      "[Parallel(n_jobs=1)]: Done 1151 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.2s\n",
+      "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.2s\n",
+      "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    0.6s\n",
+      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    0.7s\n",
+      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    0.8s\n",
+      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    0.9s\n",
+      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.0s\n",
+      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.1s\n",
+      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.2s\n",
+      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    1.3s\n",
+      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    1.4s\n"
      ]
     },
     {
@@ -198,7 +196,7 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +228,7 @@
        "29962.711288130937"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +274,7 @@
        "(160, 64, 40)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,14 +530,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia: 66.67%\n"
+      "Acurácia 66.67%\n"
      ]
     }
    ],
