--- a/SSVEP/src/beta/beta_ml.ipynb
+++ b/SSVEP/src/beta/beta_ml.ipynb
@@ -13,7 +13,7 @@
     "- Taxa de amostragem: 250Hz\n",
     "\n",
     "#### Leia aqui\n",
-    "Fez-se testes de todo o código para alguns participantes distintos como S1, S2, S3, S4 e S5. A acurácia do BETA variou bastante, principalmene no participante S5 que ficou com uma taxa inferior que 10% de acerto."
+    "Fez-se testes de todo o código para alguns participantes distintos como S1, S2, S3, S4 e S5. A acurácia do BETA variou bastante, principalmente no participante S5 que ficou com uma taxa inferior que 10% de acerto."
    ]
   },
   {
@@ -546,7 +546,7 @@
     "clf = SVC(kernel='linear', C=1, random_state=42, probability=True)\n",
     "clf.fit(x_train, y_train)\n",
     "y_pred = clf.predict(x_test)\n",
-    "print(f\"Acurácia {accuracy_score(y_test, y_pred):.2%}\")\n"
+    "print(f\"Acurácia {accuracy_score(y_test, y_pred):.2%}\")"
    ]
   }
  ],
