--- a/SSVEP/src/beta/beta_ml.ipynb
+++ b/SSVEP/src/beta/beta_ml.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -144,17 +144,17 @@
       "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.2s\n",
       "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.3s\n",
       "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.4s\n",
-      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.4s\n",
-      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    0.8s\n",
-      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    0.9s\n",
-      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.0s\n",
-      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.2s\n",
-      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    1.3s\n",
-      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    1.4s\n"
+      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.6s\n",
+      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    0.7s\n",
+      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    0.9s\n",
+      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    1.0s\n",
+      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    1.1s\n",
+      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.2s\n",
+      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.3s\n",
+      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.5s\n",
+      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    1.6s\n",
+      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    1.8s\n"
      ]
     },
     {
@@ -196,7 +196,7 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "(160, 64, 40)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -451,19 +451,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Seleção de característica manual com validação cruzada"
+    "#### Seleção de característica manual com validação cruzada\n",
+    "Com n_splits = 2, obtém-se uma acurácia de 55.00%. Com n_splits = 3, a taxa de acerto aumenta para 55.85%. Com n_splits = 4, a acurácia aumenta para 59.38%."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia média: 55.00%\n"
+      "Acurácia média: 59.38%\n"
      ]
     }
    ],
@@ -477,8 +478,8 @@
     "X = scaler.fit_transform(selected_ch)\n",
     "y = LabelEncoder().fit_transform(labels)\n",
     "\n",
-    "# Dividindo os dados normalizados em 2 conjuntos (folds) para validação cruzada\n",
-    "cv = StratifiedKFold(n_splits=2)\n",
+    "# Dividindo os dados normalizados em 4 conjuntos (folds) para validação cruzada\n",
+    "cv = StratifiedKFold(n_splits=4)\n",
     "\n",
     "# Lista para armazenar as acurácias para cada fold\n",
     "acc_scores = []\n",
