--- a/SSVEP/src/beta/classifier_per_freq_beta.ipynb
+++ b/SSVEP/src/beta/classifier_per_freq_beta.ipynb
@@ -146,8 +146,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Abordagem 2: Média do PSD\n",
-    "Nesta abordagem, calcula-se o PSD médio para cada faixa de frequência de interesse e, em seguida, verifica-se qual desses valores médios é o maior, considerando que esse será o alvo previsto. Ou seja, estamos usando a média do PSD para decidir qual alvo é o mais provável, em vez de ver o valor máximo de PSD."
+    "### Abordagem 2: Média das frequências\n",
+    "Nesta abordagem, calcula-se o PSD médio para cada faixa de frequência de interesse e, em seguida, verifica-se qual desses valores médios é o maior, considerando que esse será o alvo previsto. Ou seja, estamos usando a média das frequências para decidir qual alvo é o mais provável, em vez de ver o valor máximo de PSD."
    ]
   },
   {
