--- a/SSVEP/src/beta/beta_ml.ipynb
+++ b/SSVEP/src/beta/beta_ml.ipynb
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
     "\n",
     "mean_acc = np.mean(acc_scores)\n",
     "\n",
-    "# Imprima a média e o desvio padrão das acurácias\n",
+    "# Imprima a média\n",
     "print(f\"Acurácia média: {mean_acc:.2%}\")"
    ]
   },
@@ -531,14 +531,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia 66.67%\n"
+      "Acurácia: 66.67%\n"
      ]
     }
    ],
@@ -547,7 +547,7 @@
     "clf = SVC(kernel='linear', C=1, random_state=42, probability=True)\n",
     "clf.fit(x_train, y_train)\n",
     "y_pred = clf.predict(x_test)\n",
-    "print(f\"Acurácia {accuracy_score(y_test, y_pred):.2%}\")"
+    "print(f\"Acurácia: {accuracy_score(y_test, y_pred):.2%}\")"
    ]
   }
  ],
