--- a/SSVEP/src/beta/tunning.ipynb
+++ b/SSVEP/src/beta/tunning.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualização dos dados"
+    "### Visualização dos dados\n",
+    "Os gráficos abaixo mostram para os 40 targets o momento em que há o estímulo do SSVEP durante o período de 0,5 - 2,5 segundos. Isso é importante para entender a taxa de acurácia do participante em questão. \n",
+    "A partir do RFE, foi possível obter aproximadamente 66.67% de acurácia e, com os gráficos abaixo, nota-se que há frequências que não são estimuladas no ponto correto, como o gráfico que contém 9.0 e 8.4. O\n",
+    "A acurácia de 66.67% sugere que 33.33% dos dados do participante 3 não estão estão sendo estimulados na frequência devida. Porém, há poucos pontos que estão incorretos nos gráficos. Desse modo, talvez seja possível aumentar ainda mais a taxa de acerto para o participante em questão.\n",
+    "É válido ressaltar que os dados foram normalizados e aplicou-se validação cruzada para a seleção manual. Uma possiblidade de melhora de acurácia seria testar validação cruzada com RFE (RFECV), porém demoraria um tempo significativo para o processamento."
    ]
   },
   {
