--- a/EOG/segmentation.ipynb
+++ b/EOG/segmentation.ipynb
@@ -15,70 +15,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ -2.8834722 ,  18.218252  , -18.910511  , ...,   2.6398966 ,\n",
-       "          -3.7349935 ,   7.4631076 ],\n",
-       "        [  6.617178  ,  -3.8209395 ,   1.8515847 , ...,  -5.854906  ,\n",
-       "          -3.8280346 ,  -5.4327493 ],\n",
-       "        [-11.595966  ,  14.74045   ,   7.7698226 , ...,  -4.5176864 ,\n",
-       "           0.37455332,   6.6601686 ],\n",
-       "        [ 15.115495  , -15.170641  ,  -6.1311893 , ...,  16.025515  ,\n",
-       "          -0.93595564,   3.3250694 ]],\n",
+       "array([[[-3.90393448e+00, -2.60749378e+01, -3.24774218e+00, ...,\n",
+       "          3.23517823e+00,  1.83841717e+00,  1.85505543e+01],\n",
+       "        [-3.10271597e+00,  1.09141512e+01,  9.76041126e+00, ...,\n",
+       "         -7.54746771e+00, -6.57333136e-01,  2.51514721e+01],\n",
+       "        [-7.00262547e+00, -1.31661568e+01, -1.79386640e+00, ...,\n",
+       "         -4.62527800e+00,  2.16235962e+01, -3.07737613e+00],\n",
+       "        [ 1.54577675e+01,  4.22393894e+00,  2.06021190e+00, ...,\n",
+       "         -1.90858040e+01,  7.59409952e+00, -6.39791906e-01]],\n",
        "\n",
-       "       [[  0.65565866,  -8.753227  ,   2.041236  , ...,  -7.0834394 ,\n",
-       "          12.440379  ,   4.9941688 ],\n",
-       "        [ -5.20613   ,  24.6411    ,  12.934999  , ...,  -3.7961366 ,\n",
-       "           0.11440572,  -6.7707815 ],\n",
-       "        [  6.6156116 ,  -8.973991  ,  10.461727  , ...,  -9.04715   ,\n",
-       "           4.6981435 ,  15.723002  ],\n",
-       "        [  8.303327  ,  -2.449911  ,  -8.16138   , ...,  12.354369  ,\n",
-       "          -1.4501842 ,  -4.5641375 ]],\n",
+       "       [[ 1.33389962e+00, -1.37301931e+01, -3.43953633e+00, ...,\n",
+       "          7.52064371e+00,  5.72106028e+00,  5.33696461e+00],\n",
+       "        [ 5.54165077e+00,  7.98749971e+00,  1.11764002e+00, ...,\n",
+       "         -2.96858096e+00, -6.41626644e+00, -1.29623423e+01],\n",
+       "        [ 4.67923307e+00,  4.42317486e+00, -1.88987617e+01, ...,\n",
+       "          1.35019741e+01,  4.82803440e+00, -1.33640742e+00],\n",
+       "        [ 3.85384202e+00,  1.11449318e+01,  3.58403754e+00, ...,\n",
+       "         -1.84753168e+00, -1.00824518e+01, -2.21215267e+01]],\n",
        "\n",
-       "       [[ -8.616586  ,  17.547148  ,  -0.64185965, ...,   1.3506331 ,\n",
-       "          15.566928  ,  11.141122  ],\n",
-       "        [ -5.6901703 ,   6.7957573 ,   0.6724343 , ..., -17.23769   ,\n",
-       "          -3.2979653 ,  -9.408041  ],\n",
-       "        [  4.3541975 , -14.811874  ,   6.933133  , ...,   8.464494  ,\n",
-       "          11.2040615 ,   8.149041  ],\n",
-       "        [ -5.247111  ,  17.638538  ,   7.293126  , ...,  -6.013108  ,\n",
-       "           8.797996  ,   4.4462953 ]],\n",
+       "       [[ 8.67342186e+00,  1.96369915e+01,  1.79793835e+01, ...,\n",
+       "         -1.00006475e+01,  4.08415890e+00, -2.38892984e+00],\n",
+       "        [ 1.55402145e+01, -7.90585899e+00,  3.72103810e+00, ...,\n",
+       "          2.27708721e+00,  3.05738163e+00, -7.58011866e+00],\n",
+       "        [-1.13008738e+01, -1.28213463e+01, -1.21003494e+01, ...,\n",
+       "          2.05028744e+01, -1.54431543e+01,  2.42077675e+01],\n",
+       "        [ 4.48897314e+00,  1.10209188e+01,  1.23253202e+01, ...,\n",
+       "          1.11066923e+01, -5.52557373e+00,  8.78953171e+00]],\n",
        "\n",
        "       ...,\n",
        "\n",
-       "       [[ 18.88031   ,  13.449885  ,   6.6647415 , ..., -16.96499   ,\n",
-       "          -4.025074  ,   5.7049155 ],\n",
-       "        [ 11.159633  ,   6.1460147 ,   0.8654421 , ...,   9.38744   ,\n",
-       "           2.9995697 ,  -5.241861  ],\n",
-       "        [ 15.677423  , -14.072823  ,  13.449884  , ...,  -8.717264  ,\n",
-       "           9.88644   ,  11.701085  ],\n",
-       "        [-16.643751  ,   1.843494  ,  -6.552109  , ..., -10.547437  ,\n",
-       "           2.8141608 ,   2.6465502 ]],\n",
+       "       [[ 8.04677868e+00,  4.65664864e+00, -1.58387051e+01, ...,\n",
+       "         -2.21036739e+01, -1.22824411e+01, -3.92293036e-01],\n",
+       "        [ 6.21989965e+00,  1.60010648e+00,  1.42589605e+00, ...,\n",
+       "          1.06389103e+01,  1.69790406e-02, -6.87629986e+00],\n",
+       "        [-5.49492693e+00,  2.03135562e+00, -1.60287304e+01, ...,\n",
+       "          5.65243483e+00,  5.99308634e+00, -4.61190081e+00],\n",
+       "        [ 1.06510229e+01, -7.31094885e+00, -3.62301040e+00, ...,\n",
+       "          1.21874380e+01, -4.85772371e+00, -1.91752160e+00]],\n",
        "\n",
-       "       [[-12.598341  ,   8.792001  ,  -2.1586602 , ...,   8.637954  ,\n",
-       "          16.14754   ,  -9.359032  ],\n",
-       "        [  0.9672706 ,   8.588064  , -11.05956   , ...,  20.092382  ,\n",
-       "          17.560059  ,  10.727454  ],\n",
-       "        [ -2.918204  , -11.032514  ,  -2.1554964 , ...,  16.15579   ,\n",
-       "         -10.563611  ,   1.8301386 ],\n",
-       "        [-16.51002   ,   5.2299666 ,  -9.942596  , ...,  -4.6117234 ,\n",
-       "          -3.11123   , -16.153933  ]],\n",
+       "       [[ 1.20024359e+00,  1.24432859e+01, -1.14118862e+01, ...,\n",
+       "         -1.16111107e+01, -3.64541936e+00,  1.97450113e+00],\n",
+       "        [-1.80878391e+01,  7.43913317e+00, -7.82935238e+00, ...,\n",
+       "         -7.83226192e-01, -2.83170372e-01,  5.04509640e+00],\n",
+       "        [-1.76651611e+01,  7.98044777e+00, -1.90943050e+01, ...,\n",
+       "          8.31241131e+00,  4.38380051e+00,  1.51379490e+00],\n",
+       "        [-1.22912521e+01, -3.25996733e+00, -3.62899542e+00, ...,\n",
+       "         -1.40303450e+01,  3.54162693e+00, -4.64012480e+00]],\n",
        "\n",
-       "       [[ -3.9721017 , -21.752985  ,  16.574625  , ...,  -3.0556056 ,\n",
-       "           8.911623  ,   6.673819  ],\n",
-       "        [ -4.5002112 , -12.504335  ,   0.96417105, ...,   0.04814201,\n",
-       "          -2.3358161 , -23.460882  ],\n",
-       "        [ 13.631156  ,  11.434815  ,   1.5617399 , ...,  -1.8274945 ,\n",
-       "          -2.2654643 ,  -5.9587245 ],\n",
-       "        [  5.283068  , -12.439905  ,   0.52905554, ..., -13.327969  ,\n",
-       "           3.0827534 ,   6.5016117 ]]], dtype=float32)"
+       "       [[ 1.02502871e+01,  1.61549549e+01, -1.67673664e+01, ...,\n",
+       "          1.94250755e+01, -1.54484816e+01, -5.41787100e+00],\n",
+       "        [-5.43977833e+00,  9.06128824e-01, -4.43633461e+00, ...,\n",
+       "          4.29491663e+00,  7.39071417e+00,  2.11349449e+01],\n",
+       "        [ 1.19117765e+01, -1.17846661e+01,  1.60921745e+01, ...,\n",
+       "          2.06703777e+01,  4.86800909e+00,  3.28012061e+00],\n",
+       "        [-1.86190243e+01, -6.74798250e+00,  2.76066136e+00, ...,\n",
+       "          1.39173374e+01, -2.08437347e+01, -9.37612534e+00]]],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +137,55 @@
    "metadata": {},
    "source": [
     "*Desafio*: Implementar um algoritmo para encontrar a mesma quantidade de janelas em ambos os domínios (tempo e frequência)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " (60, 4, 1000)\n",
+      "Formato (shape) dos dados depois da divisão de janelas\n",
+      "Dominio do tempo: (60, 4, 33, 65) - (classes+ensaios, canais, janelas, linhas)\n",
+      "Dominio da frequência:  (60, 4, 33, 33) - (classes+ensaios, canais, janelas, linhas)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Teste Desafio\n",
+    "segment = 64\n",
+    "nperseg_freq = 64\n",
+    "print('', data.shape)\n",
+    "\n",
+    "overlap_time = 0  # Iniciando com sobreposição zero no domínio do tempo\n",
+    "overlap_freq = nperseg_freq // 2  # Sobreposição de 50% no domínio da frequência\n",
+    "\n",
+    "while True:\n",
+    "    # Cálculo de n_win e criação de ids\n",
+    "    n_win = int((data.shape[2] - segment) / (overlap_time + 1)) + 1\n",
+    "    ids = np.arange(n_win) * (overlap_time + 1)\n",
+    "\n",
+    "    # Janelas no domínio do tempo\n",
+    "    chunks_time = [data[:, :, k:(k + segment)] for k in ids]\n",
+    "    chunks_time = np.array(chunks_time).transpose(1, 2, 0, 3)\n",
+    "\n",
+    "    # Janelas no domínio da frequência\n",
+    "    _, _, chunks_freq = stft(data, fs=200, nperseg=nperseg_freq, noverlap=overlap_freq)\n",
+    "    chunks_freq = np.swapaxes(chunks_freq, 2, 3)\n",
+    "\n",
+    "    # Verificando se o número de janelas é o mesmo\n",
+    "    if chunks_time.shape[2] == chunks_freq.shape[2]:\n",
+    "        break  # Se o número de janelas for igual, saia do loop\n",
+    "    else:\n",
+    "        overlap_time += 1  # Incrementa a sobreposição no domínio do tempo para tentar igualar o número de janelas\n",
+    "\n",
+    "print('Formato (shape) dos dados depois da divisão de janelas')\n",
+    "print(f'Dominio do tempo: {chunks_time.shape} - (classes+ensaios, canais, janelas, linhas)')\n",
+    "print(f'Dominio da frequência:  {chunks_freq.shape} - (classes+ensaios, canais, janelas, linhas)')"
    ]
   }
  ],
